--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Open Sans', sans-serif;
             font-size: 20px;
             font-weight: 300;
-            color:rgba(255,255,255, 0.5)
+            color:rgba(255,255,255, 0.7)
         }
         h1 {
             color:#a0b6cb;
@@ -25,6 +25,7 @@
         }
         p {
             margin:0;
+            max-width:400px;
         }
 
         .bgimg {
@@ -54,7 +55,9 @@
     <div class="bgimg">
         <div class="middle">
             <h1><span class="f">Flair</span>.Fashion</h1>
+            <p>An ecosystem for fashion graduates and emerging designers, and an online marketplace with emphasis on storytelling using technology</p>
             <p>Launching soon!</p>
+            <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Instagram</p>
         </div>
     </div>
 
