Update link styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Open Sans', sans-serif;
             font-size: 20px;
             font-weight: 300;
-            color:rgba(255,255,255, 0.7)
+            color:rgba(255,255,255, 0.7);
         }
         h1 {
             color:#a0b6cb;
@@ -49,6 +49,12 @@
                 top: 10%;
             }
         }
+        a {
+            color:rgba(255,255,255, 0.7);
+        }
+        a:hover {
+            color:rgba(255,255,255, 0.5);
+        }
     </style>
 <body>
 
@@ -57,7 +63,7 @@
             <h1><span class="f">Flair</span>.Fashion</h1>
             <p>An ecosystem for fashion graduates and emerging designers, and an online marketplace with emphasis on storytelling using technology</p>
             <p>Launching soon!</p>
-            <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Instagram</p>
+            <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Follow us on Instagram</p>
         </div>
     </div>
 
