--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             color:#dfd6d8;
         }
         p {
-            margin:0;
+            margin:0 0 10px;
             max-width:400px;
         }
 
@@ -61,9 +61,8 @@
     <div class="bgimg">
         <div class="middle">
             <h1><span class="f">Flair</span>.Fashion</h1>
-            <p>An ecosystem for fashion graduates and emerging designers, and an online marketplace with emphasis on storytelling using technology</p>
-            <p>Launching soon!</p>
-            <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Follow us on Instagram</p>
+            <p>Launching soon an ecosystem for fashion graduates and emerging designers, and an online marketplace with emphasis on storytelling using technology</p>
+            <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Instagram</p>
         </div>
     </div>
 
