--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             margin:0 0 10px;
             max-width:400px;
         }
+        .logo {
+            width:300px;
+            border:0;
+        }
 
         .bgimg {
             background-image: url('bg.jpg');
@@ -48,6 +52,10 @@
             .middle {
                 top: 10%;
             }
+            .logo {
+                width:200px;
+                border:0;
+            }
         }
         a {
             color:rgba(255,255,255, 0.7);
@@ -60,7 +68,7 @@
 
     <div class="bgimg">
         <div class="middle">
-            <h1><span class="f">Flair</span>.Fashion</h1>
+            <img class="logo" src="https://res.cloudinary.com/flairfashion/image/upload/c_scale,f_auto,q_auto:best,w_600/v1600287963/FlairLogo_vicwg6.png" alt="Flair.Fashion" />
             <p>Launching soon an ecosystem for fashion graduates and emerging designers, and an online marketplace with emphasis on storytelling using technology</p>
             <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Instagram</p>
         </div>
