--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         }
         p {
             margin:0 0 10px;
-            max-width:400px;
+            max-width:500px;
+            padding-left:20px;
         }
         .logo {
             width:300px;
