--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             margin:0 0 10px;
             max-width:500px;
             padding-left:20px;
+            mix-blend-mode: overlay;
+            color: white;
         }
         .logo {
             width:150px;
