--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                 border:0;
             }
         }
+        @media only screen and (max-width: 800px) {
+            .content {
+                position:absolute;
+                bottom:10%;
+                right: 10%;
+            }
+        }
+        
         a {
             color:rgba(255,255,255, 0.7);
         }
@@ -72,8 +80,10 @@
     <div class="bgimg">
         <div class="middle">
             <img class="logo" src="https://res.cloudinary.com/flairfashion/image/upload/c_scale,f_auto,q_auto:best,w_600/v1600287963/FlairLogo_vicwg6.png" alt="Flair.Fashion" />
-            <p>Launching soon an ecosystem for fashion graduates and emerging designers, and an online marketplace with emphasis on storytelling using technology</p>
-            <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Instagram</p>
+            <div class="content">
+                <p>Launching soon an ecosystem for fashion graduates and emerging designers, and an online marketplace with emphasis on storytelling using technology</p>
+                <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Instagram</p>
+            </div>
         </div>
     </div>
 
