--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <img class="logo" src="https://res.cloudinary.com/flairfashion/image/upload/c_scale,f_auto,q_auto:best,w_600/v1600287963/FlairLogo_vicwg6.png" alt="Flair.Fashion" />
             <div class="content">
                 <p>Launching soon an ecosystem for fashion graduates and emerging designers, and an online marketplace with emphasis on storytelling using technology</p>
-                <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Instagram</p>
+                <p><a href="mailto:contact@flair.fashion">contact@flair.fashion</a> | <a href="https://www.instagram.com/flair.fashionofficial/" target="_blank">Instagram</a></p>
             </div>
         </div>
     </div>
