--- a/index.html
+++ b/index.html
@@ -62,10 +62,14 @@
         }
         @media only screen and (max-width: 800px) {
             .content {
-                position:absolute;
-                bottom:10%;
+                position:fixed;
+                bottom:5%;
                 right: 10%;
             }
+            a {
+                color:rgba(255,255,255, 1) !important;
+            }
+            
         }
         
         a {
